src/test/ui/traits/trait-resolution-in-overloaded-op.stderr
error[E0369]: cannot multiply `&T` by `f64`
  --> $DIR/trait-resolution-in-overloaded-op.rs:8:7
   |
LL |     a * b
   |     - ^ - f64
   |     |
   |     &T
   |
help: consider further restricting this bound
   |
LL | fn foo<T: MyMul<f64, f64> + std::ops::Mul<Output = f64>>(a: &T, b: f64) -> f64 {
   |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0369`.
